# qst

./: Cargo.toml  DOCS.md  README.md
assets/: defaults.rs
src/: app.rs  config.rs  history.rs  logger.rs  main.rs  ui.rs
