[package]
name = "qst"
version = "0.10.0"
authors = ["GitanElyon"]
edition = "2024"
description = "A Community Driven CLI Quick Script Tool"
license = "MIT"
repository = "https://github.com/gitanelyon/qst"
documentation = "https://github.com/GitanElyon/awesome-qst/blob/main/DOCS.md"
readme = "README.md"
keywords = ["tui", "tool", "workflow", "launcher", "community"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
anyhow = "1.0"
freedesktop-desktop-entry = "0.7.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
libc = "0.2"
arboard = "3.2"
libloading = "0.8"
meval = "0.2.0"
quadrature = "0.1.2"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-graviola = "0.3"
webpki-roots = "1"

[package.metadata.nix]
